SWIG (Simplified Wrapper and Interface Generator)

The Guile/MzScheme/Java Support Patch for 1.3a5
===============================================

5/27/2001: mkoeppe
	   [Guile] Handle pointer types with typemaps, rather than
	   hard-coded. New typemap substitutions $descriptor,
	   $basedescriptor; see documentation. Some clean-up in the
	   variable/constants wrapper generator code.  New convenience
	   macro SWIG_Guile_MustGetPtr, which allows getting pointers
	   from smobs in a functional style.  New typemap file
	   "list-vector.i", providing macros that define typemaps for
	   converting between C arrays and Scheme lists and vectors.

5/22/2001: mkoeppe
	   [Guile] Fixed extern "C" declarations in C++ mode. Thanks
	   to Greg Troxel <gdt@ir.bbn.com>.

5/21/2001: mkoeppe
	   [Guile] New linkage "module" for creating Guile modules for
	   Guile versions >= 1.5.0. 

4/18/2001: mkoeppe
	   [MzScheme] Added typemaps for passing through Scheme_Object
	   pointers. 

4/9/2001 : mkoeppe 
	   [MzScheme] Added typemaps for `bool'.  Inclusion of headers
	   and support routines is now data-driven via mzscheme.i.
	   Headers come from the new file mzschemdec.swg.  Don't abort
	   immediately when a type-handling error is reported.  When
	   searching for typemaps for enums, fall back to using int,
	   like the Guile backend does.  Support char constants.  Emit
	   correct wrapper code for variables.

3/12/2001: mkoeppe
	   [Guile] Fixed typemaps for char **OUTPUT, char **BOTH.

3/2/2001 : mkoeppe 
	   [Guile] Every wrapper function now gets a boolean variable
	   gswig_list_p which indicates whether multiple values are
	   present. The macros GUILE_APPEND_RESULT, GUILE_MAYBE_VALUES
	   and GUILE_MAYBE_VECTOR use this variable, rather than
	   checking whether the current return value is a list. This
	   allows for typemaps returning a list as a single value (a
	   list was erroneously converted into a vector or a
	   multiple-value object in this case).
